job: fix vertical alignment

--- a/src/styles/cylc/_job.scss
+++ b/src/styles/cylc/_job.scss
@@ -30,6 +30,8 @@ $cjob: ".c-job svg.job rect";
         /* scale the icon to the font-size */
         width: 1em;
         height: 1em;
+
+        vertical-align: middle;
     }
 }
 
